--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'England -- Social life and customs -- 20th century -- Fiction'
 - !lcsh 'War stories, English'
 - !lcsh 'Boys -- Fiction'
+- GITenberg
 tableOfContents: The battle of the sand-pit -- The mystery of Fortescue -- The countryman
   of Kant -- Travers Minor, scout -- The Hutchings testimonial -- The fight -- Percy
   Minimus and his Tommy -- The prize poem -- The revenge -- The "Turbot's" aunt --
